<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthFragment">

    <Button
        android:id="@+id/buttonFourthGoToFragment1"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="664dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="21dp"
        android:text="@string/fragment_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonFourthGoToFragment3"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginBottom="21dp"
        android:text="@string/fragment_3"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="226dp" />

    <Button
        android:id="@+id/buttonFourthGoToFragment4"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginBottom="21dp"
        android:text="@string/fragment_4"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="319dp" />

    <Button
        android:id="@+id/buttonFourthGoToFragment2"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginBottom="21dp"
        android:text="@string/fragment_2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="130dp" />

    <TextView
        android:id="@+id/textview_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_is"
        app:layout_constraintBottom_toTopOf="@id/textview_fourth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<Button
        android:id="@+id/button_fourth_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />-->

    <Button
        android:id="@+id/button_fourth_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_fourth" />

</androidx.constraintlayout.widget.ConstraintLayout>