<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <TextView
        android:id="@+id/textview_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/hello_third_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_third_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:text="@string/prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <Button
        android:id="@+id/button_third_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/buttonOperationMinus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="5dp"
        android:text="@string/operation_minus"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonOperationDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonOperationPlus"
        app:layout_constraintTop_toBottomOf="@+id/textview_third" />

    <Button
        android:id="@+id/buttonOperationDivision"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="108dp"
        android:text="@string/operation_division"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_third_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonOperationMultiplication"
        app:layout_constraintTop_toBottomOf="@+id/buttonOperationMinus" />

    <Button
        android:id="@+id/buttonOperationMultiplication"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="108dp"
        android:text="@string/operation_multiplication"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_third_next"
        app:layout_constraintEnd_toStartOf="@+id/buttonOperationDivision"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOperationPlus" />

    <Button
        android:id="@+id/buttonOperationPlus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/operation_plus"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonOperationMultiplication"
        app:layout_constraintEnd_toStartOf="@+id/buttonOperationMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_third" />

</androidx.constraintlayout.widget.ConstraintLayout>